--- a/admin.html
+++ b/admin.html
@@ -133,7 +133,15 @@ label{display:block;margin-bottom:6px;font-weight:600;font-size:14px;color:#ccc}
 
 <header>
   <h2>Win Win<span>.</span> Admin</h2>
-  <button class="btn-secondary" onclick="logout()">Logout</button>
+  <div style="display:flex;gap:8px;align-items:center">
+    <button class="btn-secondary" onclick="window.location.href='/'" title="Back to Website" style="padding:10px 12px">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+        <polyline points="9 22 9 12 15 12 15 22"></polyline>
+      </svg>
+    </button>
+    <button class="btn-secondary" onclick="logout()">Logout</button>
+  </div>
 </header>
 
 <div class="container">
