--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
     <meta name="twitter:description" content="Join Win Win, a performance-driven sales company specializing in B2C field sales, call center sales, and telecommunications solutions across Slovenia." />
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
 
+    <link rel="preconnect" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net">
+    <link rel="dns-prefetch" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net">
+    <link rel="preconnect" href="https://images.pexels.com">
+    <link rel="dns-prefetch" href="https://images.pexels.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"></noscript>
+
+    <link rel="preload" as="image" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=800&q=75" media="(max-width: 1023px)" imagesrcset="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=400&q=75 400w, https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=800&q=75 800w" imagesizes="100vw">
+    <link rel="preload" as="image" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1920&q=80" media="(min-width: 1024px)"  imagesrcset="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1280&q=80 1280w, https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1920&q=80 1920w" imagesizes="100vw">
   </head>
   <body>
     <div id="root"></div>
