--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"></noscript>
 
-    <link rel="preload" as="image" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=800&q=75" media="(max-width: 1023px)" imagesrcset="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=400&q=75 400w, https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=800&q=75 800w" imagesizes="100vw">
-    <link rel="preload" as="image" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1920&q=80" media="(min-width: 1024px)"  imagesrcset="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1280&q=80 1280w, https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1920&q=80 1920w" imagesizes="100vw">
+    <link rel="preload" as="image" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=800&q=75" media="(max-width: 1023px)" imagesrcset="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=400&q=75 400w, https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.jpg?auto=format&fit=crop&w=800&q=75 800w" imagesizes="100vw" fetchpriority="high">
+    <link rel="preload" as="image" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1920&q=80" media="(min-width: 1024px)"  imagesrcset="https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1280&q=80 1280w, https://6949b72b30e1aa8ca4b7eef2.imgix.net/winwin.webp?auto=format&fit=crop&w=1920&q=80 1920w" imagesizes="100vw" fetchpriority="high">
   </head>
   <body>
     <div id="root"></div>
